src/objects/Price_Plan__c.object
<CustomObject>
    <description>Defines upgrade/downgrade options for products and pricing. Used for both old print world renewals and Zuora world flexible pricing.</description>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Monthly</fullName>
                </value>
                <value>
                <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Price__c</fullName>
        <label>High Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Discount__c</fullName>
        <label>Incentive Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Price__c</fullName>
        <label>Low Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Price Plans</relationshipLabel>
        <relationshipName>Price_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_Plan__c</fullName>
        <label>Price Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Plan 0</fullName>
                </value>
                <value>
                <fullName>Plan 1</fullName>
                </value>
                <value>
                <fullName>Plan 2</fullName>
                </value>
                <value>
                <fullName>Plan 3</fullName>
                </value>
                <value>
                <fullName>Plan 4</fullName>
                </value>
                <value>
                <fullName>Plan 5</fullName>
                </value>
                <value>
                <fullName>Plan S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product From</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Price Plans (Product From)</relationshipLabel>
        <relationshipName>Price_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product To</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Price Plans (Product To)</relationshipLabel>
        <relationshipName>Price_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Price__c</fullName>
        <label>Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price_Plan__c</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Incentive_Discount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Plan1</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 1</value>
        </filters>
        <label>Plan1</label>
    </listViews>
    <listViews>
        <fullName>Plan_0</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 0</value>
        </filters>
        <label>Plan 0</label>
    </listViews>
    <listViews>
        <fullName>Plan_2</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 2</value>
        </filters>
        <label>Plan 2</label>
    </listViews>
    <listViews>
        <fullName>Plan_3</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 3</value>
        </filters>
        <label>Plan 3</label>
    </listViews>
    <listViews>
        <fullName>Plan_4</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 4</value>
        </filters>
        <label>Plan 4</label>
    </listViews>
    <listViews>
        <fullName>Plan_5</fullName>
        <columns>Price_Plan__c</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan 5</value>
        </filters>
        <label>Plan 5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Plan_S</fullName>
        <columns>NAME</columns>
        <columns>Low_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Renewal_Price__c</columns>
        <columns>Price_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Plan__c</field>
            <operation>equals</operation>
            <value>Plan S</value>
        </filters>
        <label>Plan S</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000000000}</displayFormat>
        <label>Price Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Plans</pluralLabel>
    <recordTypes>
        <fullName>Digital</fullName>
        <active>true</active>
        <description>Price Plans for Digital Products</description>
        <label>Digital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print</fullName>
        <active>true</active>
        <description>Price Plans for Print Products</description>
        <label>Print</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mandatory_price_plan</fullName>
        <active>false</active>
        <description>This rule ensures all prie plan entries are associated to a price plan</description>
        <errorConditionFormula>ISPICKVAL(Price_Plan__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Price_Plan__c</errorDisplayField>
        <errorMessage>Please pick a price plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_check</fullName>
        <active>true</active>
        <description>Check that price plans belongs to correct plan record based on product.</description>
        <errorConditionFormula>IF(RecordType.Name = &apos;Print&apos;,NOT(Product_To__c =  Plan__r.Product__c),false)</errorConditionFormula>
        <errorDisplayField>Product_To__c</errorDisplayField>
        <errorMessage>Price Plan record need to have the same product as Plan record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Renewal_Price</fullName>
        <active>true</active>
        <description>Renewal price is required if the product to is not empty. This validation rule is added because renewal price is not required for flexible pricing.</description>
        <errorConditionFormula>AND(ISBLANK( Renewal_Price__c ),
NOT(ISBLANK( Product_To__c ))
)</errorConditionFormula>
        <errorDisplayField>Renewal_Price__c</errorDisplayField>
        <errorMessage>Renewal Price is required when Product_To is not empty.</errorMessage>
    </validationRules>
</CustomObject>